SET(prefix "${CMAKE_INSTALL_PREFIX}")

FILE(GLOB SRC_FILES *.src)
#FOREACH(FNAME ${SRC_FILES})
#GET_FILENAME_COMPONENT(BASENAME ${FNAME} NAME_WE)
#ADD_CUSTOM_COMMAND(
#  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.F90
#  COMMAND ${CMAKE_COMMAND} -E copy ${FNAME}
#    ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.F90
#  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.src
#  )
#ENDFOREACH()

INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/fem/src")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hutiter/src")
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/fem/src/binio")

FIND_LIBRARY(IMPACT_LIB SITCOM)
FIND_LIBRARY(IMPACT_FLIB SITCOMF)
FIND_FILE(IMPACT_HDR com.h)
GET_FILENAME_COMPONENT(IMPACT_LIBPATH ${IMPACT_LIB} PATH)
GET_FILENAME_COMPONENT(IMPACT_INCPATH ${IMPACT_HDR} PATH)

message("IMPACT_LIB = ${IMPACT_LIB}")

include_directories(${IMPACT_INCPATH})
add_definitions(-DUSE_ISO_C_BINDINGS)

set (BUILD_STATIC FALSE CACHE BOOL "Build static COM library")

set (SolverMod_SRCS MyFinalize.F90    MyModule.F90      MyTimeStepper.F90  MyInitialize.F90  MyTimeModule.F90  SolverModule.F90 MyLibrary.F90 ModTestObject.F90)
set (Library_SRCS MyFinalize.F90    MyModule.F90      MyTimeStepper.F90  MyInitialize.F90  MyTimeModule.F90 MyLibrary.F90 ModTestObject.F90)

IF(NOT BUILD_STATIC)
  add_library(SolverModule SHARED ${SolverMod_SRCS})
  add_library(MyLibrary SHARED MyLibrary.F90 ${Library_SRCS})
ELSE()
  add_library(SolverModule STATIC ${SolverMod_SRCS})
  add_library(MyLibrary STATIC MyLibrary.F90 ${Library_SRCS})
  add_definitions( -DSTATIC_LINK )
ENDIF()
SET_TARGET_PROPERTIES(SolverModule PROPERTIES INSTALL_RPATH ${ELMERSOLVER_RPATH_STRING})
SET_TARGET_PROPERTIES(MyLibrary PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(MyLibrary PROPERTIES SUFFIX "")
SET_TARGET_PROPERTIES(MyLibrary PROPERTIES INSTALL_RPATH ${ELMERSOLVER_RPATH_STRING})
target_link_libraries(SolverModule elmersolver ${IMPACT_FLIB} ${IMPACT_LIB})
target_link_libraries(MyLibrary elmersolver)

INSTALL(TARGETS SolverModule MyLibrary LIBRARY DESTINATION "lib") 
