cmake_minimum_required(VERSION 2.8)
project(IcoFoamModule)

set (BUILD_STATIC FALSE CACHE BOOL "Build static COM library")
## Compiled objects output paths
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all executables.")
set (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "Single directory for all libraries and archives.")
mark_as_advanced (LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
# Set up RPATH
SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# 
# ========= USE IN EXISTING PROJECT ============
#
# In order to use this IllinoisRocstar Project Template
# in an existing project COPY this file from this point
# on and paste it into your project's CMakeLists.txt 
# file *before* your existing INSTALL directives.
#

FIND_LIBRARY(IMPACT_LIB SITCOM)
FIND_FILE(IMPACT_HDR com.h)
GET_FILENAME_COMPONENT(IMPACT_LIBPATH ${IMPACT_LIB} PATH)
GET_FILENAME_COMPONENT(IMPACT_INCPATH ${IMPACT_HDR} PATH)
include_directories(${IMPACT_INCPATH})

FIND_LIBRARY(IRAD_LIB IRAD)
FIND_FILE(IRAD_HDR COMM.H)
FIND_PROGRAM(RUNTEST runtest)
FIND_PROGRAM(TESTRESULT testresults)
GET_FILENAME_COMPONENT(IRAD_LIBPATH ${IRAD_LIB} PATH)
GET_FILENAME_COMPONENT(IRAD_INCPATH ${IRAD_HDR} PATH)
GET_FILENAME_COMPONENT(IRAD_EXEPATH ${RUNTEST} PATH)
include_directories(${IRAD_INCPATH})

FIND_LIBRARY(ICOFOAM_LIB IcoFoamModule)
FIND_LIBRARY(FINITEVOL_LIB finiteVolume)
FIND_LIBRARY(LDUSOLVERS_LIB lduSolvers)
FIND_LIBRARY(FOAM_LIB foam)
FIND_FILE(ICOFOAM_HDR wallFvPatch.H)
GET_FILENAME_COMPONENT(ICOFOAM_INCPATH ${ICOFOAM_HDR} PATH)
FIND_LIBRARY(WORD_HDR wordI.H)
GET_FILENAME_COMPONENT(WORD_INCPATH ${WORD_HDR} PATH)
include_directories(${ICOFOAM_INCPATH} ${WORD_INCPATH})

message("ICOFOAM_LIB = ${ICOFOAM_LIB}")
message("ICOFOAM_INCPATH = ${ICOFOAM_INCPATH}")

add_executable(IcoFoamModuleDriver src/IcoFoamModuleDriver.C)
target_link_libraries(IcoFoamModuleDriver ${ICOFOAM_LIB} ${FINITEVOL_LIB} ${LDUSOLVERS_LIB} ${FOAM_LIB} ${IRAD_LIB} ${IMPACT_LIB})

